<resources>
    <string name="app_name">My Kiddies Quiz</string>
    <string name="question_number">Question 1</string>
    <string name="question_total">Total Qst: 5</string>
    <string name="completed">0/0</string>
    <string name="score">Your Score is: </string>
    <string name="question">Your questions goes here... </string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
</resources>
